@@ -62,7 +62,7 @@
             </sizepolicy>
           </property>
           <property name="maximum" >
-            <number>49</number>
+            <number>255</number>
           </property>
           <property name="value" >
             <number>1</number>
